# JCodec

./: ..\resource\quartermovieA.avi  CMakeCache.txt  CMakeLists.txt  JEncoder  JEncoder.cpp  JEncoder.h  JVideo.h  Makefile  README.md  cmake_install.cmake  main.cpp
